--- a/MainHomeApplication/Pages/Registration.cshtml
+++ b/MainHomeApplication/Pages/Registration.cshtml
@@ -1,43 +1,43 @@
 ﻿@page
 @model MainHomeApplication.Pages.RegistrationModel
 
-<form>
+<form method="post" id="createUserForm" enctype="multipart/form-data">
     <div class="container-sm py-5">
         <div class="row mb-3">
             <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
             <div class="col-sm-10">
-                <input type="email" class="form-control" id="inputEmail3">
+                <input type="email" class="form-control" id="inputEmail3" name="Email">
             </div>
         </div>
         <div class="row mb-3">
             <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
             <div class="col-sm-10">
-                <input type="password" class="form-control" id="inputPassword3">
+                <input type="password" class="form-control" id="inputPassword3" name="Password">
             </div>
         </div>
         <div class="row mb-3">
             <label for="inputPhone" class="col-sm-2 col-form-label">Phone</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputPhone">
+                <input type="text" class="form-control" id="inputPhone" name="PhoneNumber">
             </div>
         </div>
         <fieldset class="row mb-3">
             <legend class="col-form-label col-sm-2 pt-0">Gender</legend>
             <div class="col-sm-10">
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+                    <input class="form-check-input" type="radio" name="Gender" id="gridRadios1" value="male" checked>
                     <label class="form-check-label" for="gridRadios1">
                         Male
                     </label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                    <input class="form-check-input" type="radio" name="Gender" id="gridRadios2" value="female">
                     <label class="form-check-label" for="gridRadios2">
                         Female
                     </label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                    <input class="form-check-input" type="radio" name="Gender" id="gridRadios2" value="non-binary">
                     <label class="form-check-label" for="gridRadios2">
                         Non-binary
                     </label>
@@ -46,15 +46,22 @@
             </div>
         </fieldset>
         <div class="row mb-3">
+            <label for="inputEmail3" class="col-sm-2 col-form-label">Access level</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputEmail3" name="AccessLevel">
+            </div>
+        </div>
+
+        @* <div class="row mb-3">
             <div class="col-sm-10 offset-sm-2">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="gridCheck1">
+                    <input class="form-check-input" type="checkbox" id="gridCheck1" name="AccessLevel">
                     <label class="form-check-label" for="gridCheck1">
                         Согласен на обработку персональных данных
                     </label>
                 </div>
             </div>
-        </div>
-        <button type="submit" class="btn btn-primary">Register</button>
+        </div> *@
+        <button type="submit" class="btn btn-primary" id="send_button">Register</button>
     </div>
 </form>
